--- a/journal/201907.md
+++ b/journal/201907.md
@@ -5,8 +5,8 @@
 Major news of July:
 
 * A draft [specification](https://github.com/decred/dcrdex) for the DEX has been released, marking a major milestone towards its realization. A [proposal](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) to conduct development work was submitted in early August by dcrdata developers, and will be covered in the August edition.
-* TinyDecred, a python toolkit, was released by @buck54321, a contractor who has been working on dcrdata for the last year. TinyDecred was initially a personal interest project for Brian, but over time developed into a useful set of tools [that](https://proposals.decred.org/proposals/20e967dad9e7398901decf3cfe0acf4e0853f6558a62607265c63fe791b8b124) could open up Decred-related development to the large number of python coders. A proposal was also submitted requesting $8,000 for the work which went into TinyDecred to this point - it seems to have strong support.
-* dcrdata beta v5.1 is now live, packed full of incremental improvements! There has also been good progress on dcrextdata, with more market data being collected and nodes being deployed on the network to collect data about the mempool and block propagation times.
+* TinyDecred, a python toolkit, was released by @buck54321, a contractor who has been working on dcrdata for the last year. TinyDecred was initially a personal interest project for Brian, but over time developed into a useful set of tools [that](https://proposals.decred.org/proposals/20e967dad9e7398901decf3cfe0acf4e0853f6558a62607265c63fe791b8b124) could open up Decred-related development to the large number of Python coders. A proposal was also submitted requesting $8,000 for the work which went into TinyDecred to this point - it seems to have strong support.
+* dcrdata beta v5.1 is now live, packed full of incremental improvements. There has also been good progress on dcrextdata, with more market data being collected and nodes being deployed on the network to collect data about the mempool and block propagation times.
 * Some great Decred in Depth podcasts were released with @muststopmurad and @permabullnino talking about why they're into Decred and about the opportunities and challenges they see for the project going forward. 
 * Decred-related discussion seems to be increasing on social media, and the circle of people involved in these discussions expanding. This is no doubt bolstered by the #DecredChallenge and associated memes, initiated and popularized by @Checkmate - who also published an [article](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4) about Decred's monetary premium, and submitted a [proposal](https://proposals.decred.org/proposals/78b50f218106f5de40f9bd7f604b048da168f2afbec32c8662722b70d62e4d36) to continue with this line of research (now approved). @Checkmate's article has already been cited by an [investment thesis](https://www.blockheadcap.com/post/decred-investment-thesis) from Blockhead Capital - who also had some other nice things to say about DCR.
 
@@ -14,21 +14,21 @@ Major news of July:
 
 [dcrd](https://github.com/decred/dcrd): Optimizations and infrastructure additions for various planned upcoming features, code maintenance, bug fixes.
 
-New major versions of [rpcclient](https://github.com/decred/dcrd/pull/1807), [database](https://github.com/decred/dcrd/pull/1799), [blockchain/stake](https://github.com/decred/dcrd/pull/1803) and [dcrjson](https://github.com/decred/dcrd/pull/1779) modules were introduced to take advantage of recent improvements in other modules. The new dcrjson module saw a significant overhaul, while retaining a backwards compatible API. This will allow consumer modules to pick up the majority of the improvements before they fully upgrade to the new API. Opportunity of major version bumps was taken to break tight coupling and remove unused code.
+New major versions of [rpcclient](https://github.com/decred/dcrd/pull/1807), [database](https://github.com/decred/dcrd/pull/1799), [blockchain/stake](https://github.com/decred/dcrd/pull/1803) and [dcrjson](https://github.com/decred/dcrd/pull/1779) modules were introduced to take advantage of recent improvements in other modules. The new dcrjson module saw a significant overhaul, while retaining a backwards compatible API. This will allow consumer modules to pick up the majority of the improvements via the old API before they fully upgrade to the new one. Opportunity of major version bumps was taken to break tight coupling and remove unused code.
 
 A [workaround](https://github.com/decred/dcrd/pull/1801) for Go compiler's code generation issues was added to avoid the explosion of binary size of chaincfg/v2 module.
 
 [dcrwallet](https://github.com/decred/dcrwallet): Codebase upgrades and bug fixes. Large [refactoring](https://github.com/decred/dcrwallet/pull/1509) of JSON-RPC code and [removal](https://github.com/decred/dcrwallet/pull/1496) of obsolete gRPC code have been merged.
 
-[Decrediton](https://github.com/decred/decrediton): Bug fixes and small UI improvements. Responsive purchase ticket view [implemented](https://github.com/decred/decrediton/pull/2146). A ton of dependencies were [upgraded](https://github.com/decred/decrediton/pull/2156) to close a host of vulnerabilities.
+[Decrediton](https://github.com/decred/decrediton): Minor UI improvements and bug fixes. Responsive purchase ticket view [implemented](https://github.com/decred/decrediton/pull/2146). A ton of dependencies were [upgraded](https://github.com/decred/decrediton/pull/2156) to close a host of vulnerabilities.
 
-[Politeia](https://github.com/decred/politeia): Work continues on the [redesign](https://github.com/decred/dcrdesign/issues/77) of Politeia's interface. The other major task in July concerned the [integration](https://github.com/decred/politeia/pull/951) of tlog (from Google's open source [Trillian](https://github.com/google/trillian)) data store on the backend as a replacement for Git. tlog will improve scalability, allow records to be timestamped individually, and will allow for switching to a filesystem like [IPFS](https://ipfs.io) in future.
+[Politeia](https://github.com/decred/politeia): Work continues on the [redesign](https://github.com/decred/dcrdesign/issues/77) of Politeia's interface. The other major task in July concerned the [integration](https://github.com/decred/politeia/pull/951) of tlog from Google's open source [Trillian](https://github.com/google/trillian) data store on the backend as a replacement for Git. tlog ([transparent log](https://research.swtch.com/tlog)) will improve scalability, allow records to be timestamped individually, and will allow for switching to a filesystem like [IPFS](https://ipfs.io) in future.
 
 Login by email has been [replaced](https://github.com/decred/politeia/pull/940) to use username as part of the effort to make [email optional](https://github.com/decred/politeia/issues/554) and will be deployed on Politeia during the next update.
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): UI and performance improvements, bug fixes. Reworked [Connect to Wallet](https://github.com/decred/dcrstakepool/pull/427) view and added the display of VSP's [block height](https://github.com/decred/dcrstakepool/pull/440) as a health indicator. More work to [decouple](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool and dcrwallet (dcrstakepool should only talk to the stakepoold service that in turn manages the voting wallet).
 
-Raedah Group has started work to [improve](https://github.com/raedahgroup/dcrstakepool/pull/4) the VSP authentication APIs. This will enable the use of [accountless VSPs](https://github.com/decredcommunity/issues/issues/100), which will greatly simplify the staking setup process for new users ([discussion](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$15605505894685ViDcj:decred.org)). 
+Raedah Group has started work to [improve](https://github.com/raedahgroup/dcrstakepool/pull/4) the VSP authentication APIs. This will enable the use of [accountless VSPs](https://github.com/decredcommunity/issues/issues/100), which will greatly simplify the staking setup process for new users and allow to make [email optional](https://github.com/decred/dcrstakepool/issues/274) ([discussion](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$15605505894685ViDcj:decred.org)). 
 
 [dcrlnd](https://github.com/decred/dcrlnd): Upstream changes from [lnd](https://github.com/lightningnetwork/lnd) have been [ported](https://github.com/decred/dcrlnd/pull/36#issuecomment-509370199), and private dev branches are mostly in sync with the upstream lnd master branch. The latest upstream [pull request](https://github.com/lightningnetwork/lnd/commit/add905d17f7bbb11d0df2761cdf8accf2fef2b00) to be reviewed was submitted to lnd on Jul 25.
 
@@ -40,7 +40,7 @@ Work is in progress to add [biometric authentication](https://github.com/decred/
 
 [dcrios](https://github.com/raedahgroup/dcrios): UI optimizations and bug fixes, new translations to [Spanish](https://github.com/raedahgroup/dcrios/pull/500), [Vietnamese](https://github.com/raedahgroup/dcrios/pull/498) and [Portuguese](https://github.com/raedahgroup/dcrios/pull/497).
 
-[dcrdata](https://github.com/decred/dcrdata): Beta v5.1 is now [live](https://beta.dcrdata.org/) {link to release notes if they arrive}. This release adds numerous UI enhancements, including the [addition](https://github.com/decred/dcrdata/pull/1487) of fiat and percent values to the [markets dashboard](https://explorer.dcrdata.org/market), new [styling](https://github.com/decred/dcrdata/pull/1446) on the [proposal page](https://explorer.dcrdata.org/proposal/decentralized-exchange-specification-document), a [tweak](https://github.com/decred/dcrdata/pull/1448) to the "predicted" coin supply chart, fullscreen [address chart](https://github.com/decred/dcrdata/pull/1443) (useful for [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) address), and a [progress bar](https://github.com/decred/dcrdata/pull/1447) for ticket revocations.
+[dcrdata](https://github.com/decred/dcrdata): v5.1 is now [live](https://explorer.dcrdata.org/). This release adds numerous UI enhancements, including the [addition](https://github.com/decred/dcrdata/pull/1487) of fiat and percent values to the [markets dashboard](https://explorer.dcrdata.org/market), new [styling](https://github.com/decred/dcrdata/pull/1446) on the [proposal page](https://explorer.dcrdata.org/proposal/decentralized-exchange-specification-document), a [tweak](https://github.com/decred/dcrdata/pull/1448) to the "predicted" coin supply chart, fullscreen [address chart](https://github.com/decred/dcrdata/pull/1443) (useful for [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) address), and a [progress bar](https://github.com/decred/dcrdata/pull/1447) for ticket revocations.
 
 The Insight API has received some attention, with improvements to the [address endpoint](https://github.com/decred/dcrdata/pull/1438), several bug fixes, and [increasing](https://github.com/decred/dcrdata/pull/1481) the maximum number of client connections from 1,000 to 16,384.
 
@@ -57,7 +57,6 @@ Other:
 * Draft of the DEX specification has been released and added to the new [dcrdex](https://github.com/decred/dcrdex) repository.
 * Raedah Group is working on a mobile app for local person-to-person BTC/DCR trading (the work is in private repos for now).
 * [Bug bounty](https://bounty.decred.org/) website [update](https://twitter.com/degeri_crypto/status/1154776087374770176): added details for 3 new vulnerabilities. The program has processed a total of 67 submissions, with 9 being eligible for a payout, of which 8 have been patched and disclosed.
-* {mention webwallet no longer supported, add links}
 
 Dev activity stats for July: 51 active PRs, 219 master commits, 50K added and 29K deleted lines spread across 15 repositories. Contributions came from 1-6 developers per repository.
 
@@ -92,9 +91,9 @@ Community stats as of Aug 1:
 
 In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,517 DCR and spent 10,344 DCR. Using July's daily average DCR/USD rate of $28.97, this is $450K received and $300K spent. These payments were for work completed in June at the rate of $28.90, so the billed amount is almost the same. As of Aug 1, Treasury balance is 627,514 DCR (16.8 million USD at $26.75).
 
-In July, 2 new proposals were submitted {update status upon release}: 
+In July, 2 new proposals were submitted: 
 
-* [Decred Fundamental Metrics Research Proposal - Phase 1](https://proposals.decred.org/proposals/78b50f218106f5de40f9bd7f604b048da168f2afbec32c8662722b70d62e4d36) by @Checkmate, a new contributor, requesting $12,000 for 3 months work on research and social media presence, plus $2,000 for work completed prior to this ([monetary premiums article](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4)). Voting started on Jul 30.
+* [Decred Fundamental Metrics Research Proposal - Phase 1](https://proposals.decred.org/proposals/78b50f218106f5de40f9bd7f604b048da168f2afbec32c8662722b70d62e4d36) by @Checkmate, a new contributor, requesting $12,000 for 3 months work on research and social media presence, plus $2,000 for work completed prior to this ([monetary premiums](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4) article). Voting started on Jul 30.
 
 * [TinyDecred: A Python Toolkit for Decred](https://proposals.decred.org/proposals/20e967dad9e7398901decf3cfe0acf4e0853f6558a62607265c63fe791b8b124) by @buck54321, a contractor working on dcrdata for the last year, requests $8,000 for work already completed on TinyDecred, a set of tools for interacting with the Decred blockchain in Python.
 
@@ -112,7 +111,7 @@ Staking: 30-day average ticket price was 125.8 DCR (+5.8) per dcrstats.com. The 
 
 The ticket price got to the highest levels (129.46) since the difficulty algorithm consensus chage in July 2017. An [argument](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$156359151625133psHEo:decred.org) was made that this value should not be considered an "ATH", because the ticket price has been as high as 238.9 DCR before the algorithm was changed.
 
-Historical charts of [VSP data](https://charts.dcr.farm/d/000000016/proof-of-stake-pools?orgId=1&from=1514764800000&to=now) are available at dcr.farm. Similar data was recently made available via the [dcrextdata](http://dcrextdata.raedahgroup.com/) prototype, but dcr.farm has data since Jan 2018. Setting a long time interval reveals interesting trends in VSP competition:
+Historical charts of [VSP data](https://charts.dcr.farm/d/000000016/proof-of-stake-pools?orgId=1&from=1514764800000&to=now) are available at dcr.farm. Similar data was recently made available at [dcrextdata](http://dcrextdata.raedahgroup.com/), but dcr.farm has data since Jan 2018. Setting a long time interval reveals interesting trends in VSP competition:
 
 * dcr.stakeminer.com bottomed at 14% in June and since recovered above 15% of live tickets
 * stakey.net grew from 2.8% to 6.9% live tickets in 2019 which correlates with the increase of its user count from 300 to 500
@@ -147,9 +146,9 @@ Blockhead Capital [announced](https://twitter.com/jyashouafar/status/11522383015
 
 ## Outreach
 
-Infrastructure continued to build in July that will help Decred streamline outreach and education. The website is close to complete, and should be live by the end of August with new subpages on Decred's Security, Adaptability, Self-Funding, and History. Additionally, we've agreed upon a schema and are currently assembling a resource repository building on Max Bronstein's [Canon](https://github.com/maxbron08/Decred-Canon) that will help form a natural funnel of learning for people taking the #DecredChallenge. 
+Infrastructure continued to build in July that will help Decred streamline outreach and education. The website update is close to complete, and should be live by the end of August with new subpages on Decred's Security, Adaptability, Self-Funding, and History. Additionally, we've agreed upon a schema and are currently assembling a resource repository building on Max Bronstein's [Canon](https://github.com/maxbron08/Decred-Canon) that will help form a natural funnel of learning for people taking the #DecredChallenge. 
 
-In order to achieve this, we're slightly refining the messaging, focusing largely on the fundamental principles of Decred, as all messaging flows from there. That will appear in chat within the next week for community input. Other resources for the community that have been released include the Social Media Playbook, featuring best practices for how to engage with others in a constructive way that reflects well on Decred and helps educate others about the project. 
+In order to achieve this, we're slightly refining the messaging, focusing largely on the fundamental principles of Decred, as all messaging flows from there. That will appear in chat within the next week for community input. Other resources for the community that have been in the works include the Social Media Playbook, featuring best practices for how to engage with others in a constructive way that reflects well on Decred and helps educate others about the project. 
 
 Additionally, a Community Organizer Handbook will be shared for community input shortly. This well help clarify roles and responsibilities in order to gain alignment, improve efficiency, and share best practices around the world. Along these lines, Decred is looking for geographic marketing leads to help run areas of the world. Various proposals from different regions are in the works, and should hit Politeia in the next couple of months. We are still looking for leaders in Europe and Asia, so join us in #marketing or #local\_ops in Matrix to discuss helping to decentralize the organization.
 
@@ -176,15 +175,15 @@ Ditto's July achievements:
 
 Attended:
 
-* Jul 4-5 - [Blockchain Summit Latam](https://twitter.com/Decred_ES/status/1146093986806976513) - Mexico City, Mexico. Ana Dalia [represented](https://twitter.com/AnaDaliacd23/status/1146873685229416450) Decred. After the conference there was a [dinner](https://twitter.com/Decred_ES/status/1147522846513618945) sponsored by Decred.s
+* Jul 4-5 - [Blockchain Summit Latam](https://twitter.com/Decred_ES/status/1146093986806976513) - Mexico City, Mexico. Ana Dalia [represented](https://twitter.com/AnaDaliacd23/status/1146873685229416450) Decred. After the conference there was a [dinner](https://twitter.com/Decred_ES/status/1147522846513618945) sponsored by Decred.
 * Jul 10 - [Decred meetup](https://twitter.com/Decred_BR/status/1147201276058505216) - São Paulo, Brazil. Organized by @guisso.
 * Jul 10 - [StakingCon](https://twitter.com/BlockBeatsChina/status/1147570186519638017) - Beijing, China. @Dominic "managed to charm the organizer to slot in a Decred video and particpated in the roundtable discussion". Organized by @BlockBeatsChina. ([photos](https://twitter.com/DecredCN/status/1148983482732830720))
 * Jul 11 - [Staked US event](https://twitter.com/staked_us/status/1148687292032323584) - New York, USA. Fireside chat with @joshuam, co-hosted by Staked and TokenTax.
 * Jul 19 - Meetup - Buenos Aires, Argentina. The meetup was a preparation for the upcoming Crypto Monday on Aug 12. [@Camilolwi](https://twitter.com/Camilolwi) [presented](https://twitter.com/cryptorocketok/status/1152260099072778240) Decred. Hosted by [Crypto Rocket Group](https://twitter.com/cryptorocketok). 
-* Jul 21 - [OKEx meetup](https://twitter.com/wanbihou/status/1151704823533723648) - Qingdao, China. Chat with @Dominic. {any notes?}
+* Jul 21 - [OKEx meetup](https://twitter.com/wanbihou/status/1151704823533723648) - Qingdao, China. Chat with @Dominic.
 * Jul 25 - [Computational Law + Blockchain Festival CDMX 2019](https://twitter.com/LegalHackersMX/status/1153832499333795840) - Mexico City, Mexico. @elian [represented](https://twitter.com/elianhuesca/status/1154452590983299073) the project.
-* Jul 25-26 - Cointime Summit 2019 - Ho Chi Minh City, Vietnam. Duyen Em introduced Decred to individuals in the conference area. Some guest speakers from other projects were already familiar and spoke highly of Decred, but most Vietnamese speakers are just learning about it. A detailed [report](https://github.com/decredcommunity/events/pull/7) by Duyen Em suggests that Decred deserves a much bigger presence in the thriving cryptocurrency space of Vietnam and shares ideas for establishing connections and growing the community. {update report link after merge}
-* Jul 28 - Vietnam Staking Economy - Ho Chi Minh City, Vietnam. Duyen Em represented Decred and answered questions to many young people interested in cryptocurrencies. The details are in the [report](https://github.com/decredcommunity/events/pull/7) for Cointime Summit. {update link after merge}
+* Jul 25-26 - Cointime Summit 2019 - Ho Chi Minh City, Vietnam. Duyen Em introduced Decred to individuals in the conference area. Some guest speakers from other projects were already familiar and spoke highly of Decred, but most Vietnamese speakers are just learning about it. Duyen Em suggests that Decred deserves a much bigger presence in the thriving cryptocurrency space of Vietnam and shares ideas for establishing connections and growing the community. Full report will be published on Reddit.
+* Jul 28 - Vietnam Staking Economy - Ho Chi Minh City, Vietnam. Duyen Em represented Decred and answered questions to many young people interested in cryptocurrencies. The details are in the report for Cointime Summit.
 * Jul 31 - [Open Banking Summit](https://theopenbankingsummit.com/) preliminary meetup - Mexico City, Mexico. @elian represented the project and [gave a talk](https://twitter.com/elianhuesca/status/1157313830969630725) on Decred. The summit will start on Nov 13.
 
 Upcoming:
@@ -218,7 +217,6 @@ Translations:
 Videos:
 
 * Libra: Friend or Foe? - @jy-p interview on [Block TV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance)
-* Decred Assembly Deep Dive: Decentralizing the Treasury with @moo31337 ([youtube](https://www.youtube.com/watch?v=hpUVIUkgh9k)) {video removed by the user?}
 
 Audio:
 
@@ -315,7 +313,7 @@ The 0x decentralized exchange protocol team [announced](https://blog.0xproject.c
 
 StopAndDecrypt published an [overview](https://medium.com/hackernoon/betterhash-decentralizing-bitcoin-mining-with-new-hashing-protocols-291de178e3e0) of ways how mining pools could abuse the hash power trusted to them and made the case for BetterHash - the working name for alternative mining protocols that aim to give the power back to individual miners and strip mining pools of their influence.
 
-A backdoor [sneaked](https://nakedsecurity.sophos.com/2019/07/09/backdoor-discovered-in-ruby-strong_password-library/) into a Ruby library for checking password strength. The injected malware "fetches and runs the code stored in a pastebin.com, only if running in production, with an empty exception handler that ignores any error it may raise.". The [irony](https://news.ycombinator.com/item?id=20382779) here is that the hijacking was possible because the author of the password strength checking library had weak and reused password, and had no 2FA on his RubyGems account. It is important to audit dependencies in a world where it is getting common to blindly pull in dozens or hundreds of dependencies using automated tools.
+A backdoor [sneaked](https://nakedsecurity.sophos.com/2019/07/09/backdoor-discovered-in-ruby-strong_password-library/) into a Ruby library for checking password strength. The injected malware fetches and runs the code from pastebin.com, giving the attackers the power of remote code execution. The irony here is that the hijacking was possible because the author of the password strength checking library had [weak and reused password](https://news.ycombinator.com/item?id=20382779), and had no 2FA on his RubyGems account. It is important to audit dependencies in a world where it is getting common to blindly pull in dozens or hundreds of dependencies using automated tools.
 
 The network of OpenPGP keyservers was subject to certificate flooding [attack](https://gist.github.com/rjhansen/67ab921ffb4084c865b3618d6955275f). Someone uploaded a ton of certifications for public keys of two GnuPG contributors, effectively "poisoning" them. Anyone who attempts to import a poisoned key into a vulnerable installation risks making their keyring unusable because of a massive performance degradation. Flaws of the keyserver network design were known for a long time. It basically maintains a decentralized censorship-resistant write-only database but with no robust abuse protection. During more than a decade of this vulnerability being known, the network was unable to coordinate the development and deployment of an upgrade. This once again reminds us how challenging it is to design a resilient decentralized protocol and how critical it is for a decentralized network to have a governance mechanism to adapt.
 
@@ -331,4 +329,3 @@ Credits (alphabetical order):
 
 * writing and editing: bee, cryptoleslie, degeri, Dustorf, lukebp, raedah, richardred, s\_ben
 * reviews and feedback: chappjc, davecgh, jholdstock, margaret\_mei, matheusd
-* title image: {}
