Comm Disc: narrow links + expand

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -241,18 +241,18 @@ Selected topics:
 
 @Checkmate has been very active on Twitter and generating good engagement around the #DecredChallenge and #DontSleepOnDecred hashtags, here are some highlights:
 
-* [Tweet](https://twitter.com/_Checkmatey_/status/1148682397875167233) about Monetary Premiums article
-* [Decred is not Bitcoin fork](https://twitter.com/_Checkmatey_/status/1155901635257929728)
+* [Announcement](https://twitter.com/_Checkmatey_/status/1148682397875167233) of the Monetary Premiums article
+* [Not a Bitcoin fork](https://twitter.com/_Checkmatey_/status/1155901635257929728)
 * [Skin in the game](https://twitter.com/_Checkmatey_/status/1148354974390390784)
-* [The hedge for Bitcoiners and Ethereuns](https://twitter.com/_Checkmatey_/status/1149560942654414848)
-* [Differentiate where it matters](https://twitter.com/_Checkmatey_/status/1150831105081298944)
+* [The hedge](https://twitter.com/_Checkmatey_/status/1149560942654414848) for Bitcoiners and Ethereuns
+* [Differentiate](https://twitter.com/_Checkmatey_/status/1150831105081298944) where it matters
 * [Treasury Fund](https://twitter.com/_Checkmatey_/status/1157342578787913733)
-* [Politeia proposals](https://twitter.com/_Checkmatey_/status/1156293040509739010)
-* [A digital organism designed to deliver the most resilient sound money](https://twitter.com/_Checkmatey_/status/1155567971823226881)
+* [Politeia Proposals](https://twitter.com/_Checkmatey_/status/1156293040509739010)
+* [A digital organism](https://twitter.com/_Checkmatey_/status/1155567971823226881) designed to deliver the most resilient sound money
 
 Other selected tweets:
 
-* #DecredChallenge: Find an engineering team that takes the challenge of [limiting](https://twitter.com/RichardRed0x/status/1146917561751212032) its own power and influence as seriously as Company 0 has done with Decred
+* #DecredChallenge: Find an engineering team that takes the challenge of [limiting its own power](https://twitter.com/RichardRed0x/status/1146917561751212032) and influence as seriously as Company 0 has done with Decred
 * Chris Burniske on what got him [interested](https://twitter.com/lefebvre_dustin/status/1156316679040901125) in the Decred project 
 * Decred's hybrid PoW + PoS [enables](https://twitter.com/NoahPierau/status/1155466908738686977) 3 formal governance mechanisms
 * The Decred Journal is now being [circulated](https://twitter.com/Binance_Info/status/1153575996487954432) on Binance Info
@@ -263,17 +263,17 @@ Other selected tweets:
 
 Selected Reddit threads:
 
-* [Decred Community Growth](https://www.reddit.com/r/decred/comments/c9xtml/decred_community_growth/)
-* [I am a time-traveler from the future, here to beg you to continue what you are doing.](https://www.reddit.com/r/decred/comments/c9jxml/i_am_a_timetraveler_from_the_future_here_to_beg/)
-* [Suggestion](https://www.reddit.com/r/decred/comments/casb4b/decred_project_live_chat_infrastructure/) to remove #random chat room.
-* [Format to discuss past proposals, reporting, Reddit-like forum, language of doing](https://www.reddit.com/r/decred/comments/cb7g8g/general_is_there_an_optimal_rdecred_format_that/)
-* [Privacy of individual contractor payments vs transparency](https://www.reddit.com/r/decred/comments/cf773y/discussion_per_delivery_vs_per_hour/)
-* [In a scenario in which a miner submits a block with a double spend, do stakers have any power in ensuring that block isn't validated? If not, what role do stakers have in preventing majority/51% attacks?](https://www.reddit.com/r/decred/comments/cgz12h/in_a_scenario_in_which_a_miner_submits_a_block/)
-* [Decred's governance model, it's hard to add governance after launch](https://www.reddit.com/r/decred/comments/cirkvr/decreds_governance_model/)
-* [Why Decred Wins in the End? Incrementalism](https://www.reddit.com/r/decred/comments/cc8c0h/why_decred_wins_in_the_end_incrementalism/)
-* [Can 'Flair' increase the odds of self-guided education on r/decred?](https://www.reddit.com/r/decred/comments/ch0gey/governance_can_flair_increase_the_odds_of/)
-* [David Ogilvy talks Direct Response Advertising](https://www.reddit.com/r/decred/comments/ci82iy/david_ogilvy_talks_direct_response_advertising/)
-* [What metaphor/analogy helps you understand different actors within the project?](https://www.reddit.com/r/decred/comments/cc40hb/general_what_metaphoranalogy_helps_you_understand/)
+* Decred [community growth](https://www.reddit.com/r/decred/comments/c9xtml/decred_community_growth/)
+* I am a [time-traveler from the future](https://www.reddit.com/r/decred/comments/c9jxml/i_am_a_timetraveler_from_the_future_here_to_beg/), here to beg you to continue what you are doing
+* [Suggestion](https://www.reddit.com/r/decred/comments/casb4b/decred_project_live_chat_infrastructure/) to remove #random chat room
+* Format to keep an eye and discuss [past proposals](https://www.reddit.com/r/decred/comments/cb7g8g/general_is_there_an_optimal_rdecred_format_that/); reporting, Reddit-like forum, language of doing
+* The balance between privacy of individual [contractor payments](https://www.reddit.com/r/decred/comments/cf773y/discussion_per_delivery_vs_per_hour/) and transparency for stakeholders
+* Whether stakers can ensure that a block with a [double spend](https://www.reddit.com/r/decred/comments/cgz12h/in_a_scenario_in_which_a_miner_submits_a_block/) is not validated and the role of stakers in preventing majority/51% attacks
+* Decred's [governance model](https://www.reddit.com/r/decred/comments/cirkvr/decreds_governance_model/); it's hard to add governance after launch
+* Why Decred Wins in the End? [Incrementalism](https://www.reddit.com/r/decred/comments/cc8c0h/why_decred_wins_in_the_end_incrementalism/)
+* Can [Flair](https://www.reddit.com/r/decred/comments/ch0gey/governance_can_flair_increase_the_odds_of/) increase the odds of self-guided education on r/decred?
+* David Ogilvy talks [Direct Response Advertising](https://www.reddit.com/r/decred/comments/ci82iy/david_ogilvy_talks_direct_response_advertising/); targeting groups that share our values and value sovereignty as high as we do
+* What [metaphor/analogy](https://www.reddit.com/r/decred/comments/cc40hb/general_what_metaphoranalogy_helps_you_understand/) helps you understand different actors within the project?
 
 ## Markets
 
