Remove DRAFT from title

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – July 2019
+# Decred Journal – July 2019
 
 ![Image: Staking discussion at StakingCon 2019 in Beijing](../img/stakingcon2019-384.jpg)
 
