--- a/journal/201908.md
+++ b/journal/201908.md
@@ -142,11 +142,19 @@ Upcoming:
 
 {community efforts: Decred Assembly, websites, etc}
 
+Since April there have been a transfer of knowledge about DJ production in order to make it more "decentralized". As a result, several documents were created:
+
+* self-describing [template](https://github.com/xaur/decred-news/blob/docs/journal-template.md)
+* revamped [contributing](https://github.com/xaur/decred-news/blob/docs/contributing.md) page, 
+* [content plan](https://github.com/xaur/decred-news/blob/docs/content.md) with ideas for expansion
+* huge guidelines doc that captures the vision and ways of DJ is [under construction](https://github.com/xaur/decred-news/pull/91)
+
 {ratings news}
 
 Selected articles:
 
 * Decred Q&A with @elian for Crypto Hispano ([steemit](https://steemit.com/btc/@cryptohispano01/decred-q-and-a))
+* https://medium.com/@imagnusholdings/decred-the-power-to-think-for-oneself-46b9aab9ff0e
 * {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
@@ -165,7 +173,7 @@ Audio:
 
 Comm systems news:
 
-* {}
+* Reddit [thread](https://www.reddit.com/r/decred/comments/coppup/i_did_a_review_of_the_powpos_mechanism_used_in/) was removed where the author tried to get exposure for his project by posting a low effort review of how Decred's hybrid PoW+PoS does not work. Our moderation is transparent thanks to publicmodlogs {link}
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
@@ -175,7 +183,7 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-* {}
+* https://twitter.com/RichardRed0x/status/1160972879133073409
 
 ## Markets
 
@@ -186,6 +194,11 @@ In August DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average dai
 ## Relevant External
 
 {PoW, ASIC resistance, full nodes, cc network security and other cc tech}
+
+{new mining protocols and software}:
+
+* https://blockstream.com/2019/08/08/en-mining-launch/
+* https://bitcoinmagazine.com/articles/with-stratum-v2-braiins-plans-big-overhaul-in-pooled-bitcoin-mining
 
 {governance, funding, chain forks, community forks, controversy}
 
