Add missed Taipei event

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -130,6 +130,7 @@ New merchants:
 
 Attended:
 
+* Jul 2-3 - Asia Blockchain Summit 2019 - Taipei, Taiwan. @morphymore in the Decred Jacket was there to make a presence, and to explain Decred to those who wanted to learn more about the project. _(missed in July issue)_
 * {dates} - [{title}]({event link}) - {city}, {country}. {recap}
 
 Upcoming:
