--- a/journal/201908.md
+++ b/journal/201908.md
@@ -14,7 +14,11 @@
 
 [Decrediton](https://github.com/decred/decrediton): {}
 
-[Politeia](https://github.com/decred/politeia): {}
+[Politeia](https://github.com/decred/politeia):
+
+Discussion:
+
+* Multiple choice voting https://github.com/decred/politeia/issues/966
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
@@ -74,6 +78,8 @@ In August the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNq
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
+{market makers: cover how owners engaged with the community and adjusted proposals in response to feedback}
+
 ## Network
 
 {cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
@@ -122,6 +128,8 @@ New merchants:
 
 {investment adoption}
 
+{@betterfuture position, ask if he's ok to put in DJ https://twitter.com/BetterCio/status/1163340116120625152 }
+
 ## Outreach
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
@@ -164,7 +172,7 @@ Translations:
 
 Videos:
 
-* {}
+* Decred's Market Maker Proposals - Crypto Governance In Action! by @Exittus ([youtube](https://www.youtube.com/watch?v=BKSMA-eanoY))
 
 Audio:
 
@@ -175,6 +183,8 @@ Audio:
 Comm systems news:
 
 * Reddit [thread](https://www.reddit.com/r/decred/comments/coppup/i_did_a_review_of_the_powpos_mechanism_used_in/) was removed where the author tried to get exposure for his project by posting a low effort review of how Decred's hybrid PoW+PoS does not work. Our moderation is transparent thanks to publicmodlogs {link}
+* More impostors were detected in Telegram that promise to help with your technical problem for a modest 0.05 BTC. Beware the scammers.
+* {new dex dev room}
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
@@ -186,11 +196,15 @@ Selected Twitter discussions:
 
 * https://twitter.com/RichardRed0x/status/1160972879133073409
 
+New Twitter account [@DCRtheSOV](https://twitter.com/DCRtheSOV) aims to [become](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15650685647545vLtzj:decred.org) a reputable source of news and analysis covering Decred and is looking for feedback.
+
 ## Markets
 
 In August DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+
+In context of discussing market maker proposals, [CoinMarketBook](https://coinmarketbook.cc/) argues "Market cap is a lie. Buy support tells the true story". As of 2019-08-19, DCR is #95 in that rating with only $260K of buy support at 10% distance from highest bid price. For context: BTC has $360M, ETH $55M, LTC $23M, XMR $9.5M, DASH $5.7M, DOGE $4.6M.
 
 ## Relevant External
 
@@ -200,6 +214,7 @@ In August DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average dai
 
 * https://blockstream.com/2019/08/08/en-mining-launch/
 * https://bitcoinmagazine.com/articles/with-stratum-v2-braiins-plans-big-overhaul-in-pooled-bitcoin-mining
+* https://www.forbes.com/sites/ktorpey/2019/08/08/blockstream-reveals-massive-bitcoin-mining-facilities-fidelity-an-early-customer/
 
 {governance, funding, chain forks, community forks, controversy}
 
