--- a/journal/201908.md
+++ b/journal/201908.md
@@ -116,6 +116,8 @@ Exchange integrations:
 
 {wallets}
 
+https://twitter.com/ellipalwallet/status/1163771448042803201 (hardware wallet ?)
+
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
 ## Adoption
