--- a/journal/201908.md
+++ b/journal/201908.md
@@ -4,6 +4,13 @@
 
 {introduction, major news of the month ordered by impact}
 
+- Privacy announcement 
+- Locked DCR broke 50%
+
+## Privacy
+
+{idea: standalone "ad-hoc" section with short overview of the concept + all links to follow up}
+
 ## Development
 
 {add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans}
@@ -80,6 +87,10 @@ In August the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNq
 
 {market makers: cover how owners engaged with the community and adjusted proposals in response to feedback}
 
+https://www.reddit.com/r/decred/comments/cutc16/decred_events_meetups_in_the_cis_in_20192020/
+
+{Dump FUD attempt https://twitter.com/cburniske/status/1163912381598248965 }
+
 ## Network
 
 {cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
@@ -130,8 +141,6 @@ New merchants:
 
 {investment adoption}
 
-{@betterfuture position, ask if he's ok to put in DJ https://twitter.com/BetterCio/status/1163340116120625152 }
-
 ## Outreach
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
@@ -148,6 +157,10 @@ Upcoming:
 * {dates} - [{title}]({event link}) - {city}, {country}. {info}
 
 {announcements in Events domain}
+
+
+Alex Von Schulze is looking for people to organize the first Decred meetup in Kansas City  https://twitter.com/avonschulze/status/1166026265805172737 
+https://www.meetup.com/Decred-KC/
 
 ## Media
 
@@ -166,19 +179,20 @@ Selected articles:
 
 * Decred Q&A with @elian for Crypto Hispano ([steemit](https://steemit.com/btc/@cryptohispano01/decred-q-and-a))
 * https://medium.com/@imagnusholdings/decred-the-power-to-think-for-oneself-46b9aab9ff0e
+* https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape/
 * {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
 
-* {}
+* https://stakey.club/translated/privacy-landscape/ by {@emiliomann?}
 
 Videos:
 
-* Decred's Market Maker Proposals - Crypto Governance In Action! by @Exittus ([youtube](https://www.youtube.com/watch?v=BKSMA-eanoY))
+* Decred's Market Maker Proposals - Crypto Governance In Action! by @Exitus ([youtube](https://www.youtube.com/watch?v=BKSMA-eanoY))
 
 Audio:
 
-* {}
+* https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/
 
 ## Community Discussions
 
@@ -186,9 +200,14 @@ Comm systems news:
 
 * Reddit [thread](https://www.reddit.com/r/decred/comments/coppup/i_did_a_review_of_the_powpos_mechanism_used_in/) was removed where the author tried to get exposure for his project by posting a low effort review of how Decred's hybrid PoW+PoS does not work. Our moderation is transparent thanks to publicmodlogs {link}
 * More impostors were detected in Telegram that promise to help with your technical problem for a modest 0.05 BTC. Beware the scammers.
+* Yet another attention attack: question received a proper answer and was quickly deleted https://www.reddit.com/r/decred/comments/cvrddy/raising_the_limit_of_coins/ . It was "undeleted", but this pattern more and more discourages knowledgeable people from participating on the platform. 
 * {new dex dev room}
 
 {selected discussed topics, as bullet list or one paragraph per topic}
+
+* {VN AMA 309 comments}
+  - https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15666653176958nkoPq:decred.org
+  - https://github.com/noahpierau/articles/blob/master/Decred-Vietnam-AMA.md }
 
 Selected Reddit posts:
 
@@ -227,6 +246,10 @@ https://blog.makerdao.com/an-update-to-maker-governance-polling/ {Maker's govern
 {related exchanges and websites}
 
 {other: regulations, security, fun}
+
+Australia is [considering](https://www.abc.net.au/news/2019-08-20/transacting-$10,000-or-more-in-cash-could-make-you-a-criminal/11429230) to ban cash payments to businesses larger than $10K, affecting major purchases like cars, housing, and such. This will not apply to individual-to-individual transactions. Commenters noted that this can be abused as a tool to implement negative interest rates, on top of standard surveillance concerns.
+
+{fungibility} https://www.coindesk.com/us-treasury-blacklists-bitcoin-litecoin-addresses-of-chinese-drug-kingpins
 
 ## About This Issue
 
