--- a/journal/201908.md
+++ b/journal/201908.md
@@ -65,7 +65,7 @@ Congratulations to {n} contributors listed on [decred.org](https://decred.org/co
 
 Community stats:
 
-* Politeia users: {} (+{})
+* Politeia users: 174 (+20)
 * Twitter followers: 40,597 (+25)
 * Reddit subscribers: 9,594 (+{})
 * Matrix users: 412 (+28)
